update: 統一基金、ETF圖表最高對低點判斷

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
@@ -539,18 +539,18 @@
                                             minPoint;
 
                                         allPoints.filter(function (point) {
-                                            if (!maxValue || maxValue < point.y) {
+                                            if (!maxValue && maxValue !== 0 || maxValue < point.y) {
                                                 maxValue = point.y;
                                                 maxPoint = point;
                                             }
-                                            if (!minValue || minValue > point.y) {
+                                            if (!minValue && minValue !== 0 || minValue > point.y) {
                                                 minValue = point.y;
                                                 minPoint = point;
                                             }
                                         });
 
-                                        var maxPointMoreThanHalf = allPoints.indexOf(maxPoint) > allPoints.length / 2;
-                                        var minPointMoreThanHalf = allPoints.indexOf(minPoint) > allPoints.length / 2;
+                                        var maxPointMoreThanHalf = allPoints.indexOf(maxPoint) >= allPoints.length / 2;
+                                        var minPointMoreThanHalf = allPoints.indexOf(minPoint) >= allPoints.length / 2;
 
                                         setTimeout(function () {
                                             if (maxPoint) {
