update: 設定etf詳細頁圖表允許null值連接線

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
@@ -334,6 +334,7 @@
                 },
                 plotOptions: {
                     series: {
+                        connectNulls: true,
                         dataGrouping: {
                             enabled: false
                         },
