--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -1054,6 +1054,7 @@
                             },
                             plotOptions: {
                                 series: {
+                                    connectNulls: true,
                                     dataGrouping: {
                                         enabled: false
                                     },
@@ -1527,6 +1528,7 @@
                             },
                             plotOptions: {
                                 series: {
+                                    connectNulls: true,
                                     dataGrouping: {
                                         enabled: false
                                     },
