update:調整負號樣式加大加粗

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -37,6 +37,8 @@
                 }
                     .o-fall:before {
                         content: "-";
+                        font-size: 20px;
+                        font-weight: bolder;
                     }
             `;
         document.head.appendChild(style);
