--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
@@ -13,6 +13,8 @@
 
     .o-fall:before {
         content: "-";
+        font-size: 20px;
+        font-weight: bolder;
     }
     /* 箭頭樣式 ，避免被js蓋過*/
     .o-uparrow:before {
