update: 調整箭頭原始大小

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_QuoteChangeSetting.cshtml
@@ -23,6 +23,8 @@
 
     .o-downarrow:before {
         content: "▼";
+        font-size: 10px;
+        font-weight: normal;
     }
 </style>
 <div class="c-tab__panel" data-tab-panel-id="tab-3">
