--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -51,6 +51,8 @@
                 }
                     .o-fall:before {
                         content: "▼";
+                        font-size: 10px;
+                        font-weight: normal;
                     }
             `;
             document.head.appendChild(style);
