update: 調整同類排行間距，避免被漲跌樣式壓縮

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/EtfDetailIndex.cshtml
@@ -11,7 +11,11 @@
     var etfData = Model.BasicEtf as EtfDetail;
     string pageId = Sitecore.Context.Item.ID.ToString();
 }
-
+<style>
+    .c-swiper--3rows.is-paginationless, .c-swiper--minor.is-paginationless {
+        padding-bottom: 10px;
+    }
+</style>
 <div class="l-mainstage">
     <div class="l-mainstage__wrap">
         <div class="l-mainstage__toolbar">
