--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYearsInside.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYearsInside.cshtml
@@ -114,7 +114,9 @@
     var getUrlString = location.href;
     var url = new URL(getUrlString);
     var fundId = url.searchParams.get('id');
-        let detailsUrlWithParma = new URL(location.origin + detailsUrl + '?id=' + fundId);
+    let detailsUrlWithParma = new URL(location.origin + detailsUrl + '?id=' + fundId);
+     // 詳細頁麵包屑帶入id回去
+    let secondLastLi = $(".o-breadcrumb > li").slice(-2, -1).find('a')[0].setAttribute('href', detailsUrlWithParma);
     let colorCode = [
         '#238C6C',
         '#D0A66C',
