--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYearsInside.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYearsInside.cshtml
@@ -127,7 +127,7 @@
             }
             let detailsUrlWithParma = new URL(location.origin + detailsUrl + '?id=' + fundId);
             // 詳細頁麵包屑帶入id回去
-            let secondLastLi = $(".o-breadcrumb > li").slice(-2, -1).find('a')[0].setAttribute('href', DOMPurify.sanitize(detailsUrlWithParma));
+            let secondLastLi = $(".o-breadcrumb > li").slice(-2, -1).find('a')[0].href = DOMPurify.sanitize(detailsUrlWithParma);
             let colorCode = [
                 '#238C6C',
                 '#D0A66C',
